recursion.lessons.recursion.koch.Crab.scala.error
Crab:17: error: expected start of definition
	override def run() {
                 ^Crab:20: error: Unmatched closing brace '}' ignored here
}
^